Removed duplicate content and restructured the Diagnostics section. Also added a note to make primary/secondary and active/active (server roles configuration) concept clearer.

--- a/doc-General_Configuration/topics/Configuration.adoc
+++ b/doc-General_Configuration/topics/Configuration.adoc
@@ -643,6 +643,12 @@ These roles are enabled by default on all servers.
 [[server-roles]]
 ====== Server Roles
 
+[NOTE]
+====
+* Server roles that are in an active/active high availability configuration _(load balancing and failover protection)_ are active in more than one location; whereas, roles that are in an active/passive _(primary/secondary in the case of {product-title_short})_ high availability configuration _(failover protection)_, if more than one {product-title_short} server in a specific zone or region has this role, only one will be active _(primary)_ at a time and a failover has to occur to the passive _(secondary)_ appliance with that role.
+* For information on region and zone diagnostics and server role priorities, see xref:diagnostics[].
+====
+
 [width="100%",cols="50%,70%a,30%,55%",options="header",]
 |=======================================================================
 |Server Role|Description|Zone or Region Aware|Primary/Secondary or Active/Active
@@ -2226,6 +2232,7 @@ image:2095.png[]
 image:2096.png[]
 . Click *Add*.
 
+
 [[diagnostics]]
 === Diagnostics
 
@@ -2241,8 +2248,10 @@ The Diagnostics area is designed in a hierarchy.
 
 Using the console, you can set the priority of server regional roles, review and reset replication, and create backups of your database either on demand or on a schedule.
 
-Regions are used primarily to consolidate multiple VMDBs into one master VMDB for reporting while zones are used to define functional groups of servers. There can be only one region per VMDB, but multiple zones per region (or VMDB). Some server roles are aware of each other across {product-title} appliances at the region level. This means that redundancy and failover rules apply at the region level. You can
-also set priorities for the server roles that provide failover.
+Regions are used primarily to consolidate multiple VMDBs into one master VMDB for reporting while zones are used to define functional groups of servers. There can be only one region per VMDB, but multiple zones per region (or VMDB). Some server roles are aware of each other across {product-title} appliances at the region level. This means that redundancy and failover rules apply at the region level. You can also set priorities for the server roles that provide failover.
+
+[[server-role-priorities]]
+===== Server Role Priorities
 
 If you have multiple servers in your environment with duplicate failover roles, then you can set the priority of the server role.
 
@@ -2281,6 +2290,7 @@ Tertiary roles simply show as active in the console.
 |=======================================================================
 
 
+
 [[setting-the-priority-of-a-failover-role]]
 ==== Setting the Priority of a Failover Role
 
@@ -2298,6 +2308,7 @@ To set the priority of a failover role:
 
 The console provides a way to see all the server roles that a server has been assigned and if these roles are running. This is especially helpful when you have multiple servers with different server roles. For each zone you can also set a central place for all logs to be collected, and collect capacity and utilization data that may be missing.
 
+
 [[viewing-the-status-of-server-roles]]
 ===== Viewing the Status of Server Roles
 
@@ -2307,21 +2318,6 @@ To view the status of server roles:
 . Click on the *Diagnostics* accordion, then click the *Zone* that you want to view.
 . Depending on how you want to view your servers, click either *Roles by Servers* or the *Servers by Roles*.
 
-[[setting-server-role-priorities]]
-===== Setting Server Role Priorities
-
-If you have multiple servers in your environment with duplicate failover roles, then you can set the priority of the server role.
-
-* Only server roles that support failover can be marked as primary. These are *Notifier*, *Capacity & Utilization Coordinator*, *Event Monitor*, *Scheduler*, *Storage Inventory*, and *Provider Inventory*.
-* All other server roles are additive. The more servers with that role in a zone the more work that can be performed.
-
-There are three role priorities.
-
-* *Primary*: There can only be one primary per zone per role. When an appliance is started, the system looks to see if any role is set to primary. If that is the case, the role is activated on that appliance and deactivated from the secondary. In the console, primary roles are shown in bold letters. The text turns red if the server goes down.
-
-* *Secondary*: This is the default priority. There can be multiple secondaries. When an appliance is started, if no primary is found in the zone, the first appliance to start takes the role. In the console, secondary roles are displayed normally with the word "secondary".
-
-* *Tertiary*: If all appliances with primary roles or secondary roles are down, one of the tertiary would be activated. The reason for tertiary is to ensure that if a Server with crucial roles such as Provider Inventory or Event Monitor goes down, you have a way to associate those roles to different appliances by organizing the priorities. Tertiary roles simply show as active in the console.
 
 [[zone-aware-server-roles]]
 ===== Zone Aware Server Roles
@@ -2347,17 +2343,6 @@ There are three role priorities.
 |=======================================================================
 
 
-[[setting-the-priority-of-a-failover-role-1]]
-===== Setting the Priority of a Failover Role
-
-To set the priority of a failover role:
-
-. From the settings menu, select *Configuration*.
-. Click on the *Diagnostics* accordion, then click the *Zone* that you want to view.
-. Depending on how you want to view your servers, click either the *Roles by Servers* tab or the *Servers by Roles* tab.
-. From the *Status of Roles* for *Servers* in *Zone Default Zone* area, click on the role that you want to set the priority for.
-. Click image:2097.png[] (*Promote Server to primary for this role*) to make this the primary Server for this role.
-. Click image:2098.png[] (*Demote Server to normal for this role*) to demote the priority of this Server for this role.
 
 [[removing-an-inactive-server]]
 ====== Removing an Inactive Server
