updated older OCP references to 3.5, corrected typo in subtitle of guide

--- a/doc-Installing_on_OpenShift_Container_Platform/topics/installation.adoc
+++ b/doc-Installing_on_OpenShift_Container_Platform/topics/installation.adoc
@@ -15,20 +15,14 @@ Running {product-title} on OpenShift Container Platform is available as a techno
 [[prerequisites]]
 === Prerequisites
 
-To successfully deploy a {product-title} appliance on OpenShift Container Platform, you need a functioning OpenShift Container Platform 3.3 or newer install with the following configured:
+To successfully deploy a {product-title} appliance on OpenShift Container Platform, you need a functioning OpenShift Container Platform 3.5 or newer install with the following configured:
 
 * NFS or other compatible volume provider
 * A `cluster-admin` user
 * A basic user
 
-The {product-title_short} deployment uses three files to create the appliance: `cfme-template.yaml`, which is the {product-title_short} template used for the deployment, and `cfme-pv-example.yaml` and `cfme-pv-app-example.yaml`, two pod volume files.
+The {product-title_short} deployment uses three files to create the appliance: `cfme-template.yaml`, which is the {product-title_short} template used for the deployment, and `cfme-pv-example.yaml` and `cfme-pv-app-example.yaml`, two pod volume files. OpenShift Container Platform 3.5 includes these files by default.
 
-OpenShift Container Platform 3.4 includes these files by default.
-
-[NOTE]
-====
-To deploy on OpenShift Container Platform 3.3, download the `yaml` files locally to your OpenShift server, or clone the repository from GitHub at https://github.com/openshift/openshift-ansible/tree/master/roles/openshift_examples/files/examples/v1.4/cfme-templates/.
-====
 
 [[preparing-for-deployment]]
 === Preparing to Deploy {product-title_short}
