updated preparing and deploying chapters with new info from upstream; rearranged structure so troubleshooting is separate after login

--- a/doc-Installing_on_OpenShift_Container_Platform/miq/index.adoc
+++ b/doc-Installing_on_OpenShift_Container_Platform/miq/index.adoc
@@ -24,6 +24,9 @@ include::common/initial-login.adoc[]
 
 include::common/initial-login-changepw.adoc[]
 
+[[Troubleshooting]]
+include::topics/troubleshooting.adoc[]
+
 [appendix]
 [[appendix]]
 == Appendix
