--- a/doc-Installing_on_OpenShift_Container_Platform/cfme/master.adoc
+++ b/doc-Installing_on_OpenShift_Container_Platform/cfme/master.adoc
@@ -26,6 +26,9 @@ include::common/initial-login.adoc[]
 
 include::common/initial-login-changepw.adoc[]
 
+[[Troubleshooting]]
+include::topics/troubleshooting.adoc[]
+
 [appendix]
 [[appendix]]
 == Appendix
