--- a/api/reference/providers.adoc
+++ b/api/reference/providers.adoc
@@ -280,6 +280,28 @@ Amqp event provider:
 }
 ----
 
+Ceilometer event provider:
+[source, json]
+----
+{
+  "name"              : "Openstack Provider",
+  "type"              : "ManageIQ::Providers::Openstack::CloudManager",
+  "hostname"          : "ceilometerhost.com",
+  "ipaddress"         : "192.168.150.1",
+  "security_protocol" : "ssl",
+  ...
+  "connection_configurations": {
+      "userid"   :  "userid",
+      "password" :  "password"
+  },
+  "connection_configurations": [
+      "endpoint" : {
+        "role"   : "ceilometer"
+      }
+    }
+  ]
+}
+----
 
 [[editing-providers]]
 === Editing Providers
