--- a/common/appe-appliance-console-cli.adoc
+++ b/common/appe-appliance-console-cli.adoc
@@ -393,12 +393,12 @@ To create a new database locally on the server using `/dev/sdb`:
 
 To copy the v2_key from a host _some.example.com_ to local machine:
 ----
-# appliance_console_cli --fetch_key some.example.com --sshlogin root --sshpassword smartvm
+# appliance_console_cli --fetch-key some.example.com --sshlogin root --sshpassword smartvm
 ----
 
 You could combine the two to join a region where _db.example.com_ is the appliance hosting the database:
 ----
-# appliance_console_cli --fetch_key db.example.com --sshlogin root --sshpassword smartvm --hostname db.example.com --password mydatabasepassword
+# appliance_console_cli --fetch-key db.example.com --sshlogin root --sshpassword smartvm --hostname db.example.com --password mydatabasepassword
 ----
 
 To configure external authentication:
