Updated all OpenShift Enterprise references to OpenShift Container Platform in the Managing Providers guide, except where we specifically document OSE versions 3.2 and 3.1 as it's the correct name

--- a/doc-Managing_Providers/topics/Managing_Containers.adoc
+++ b/doc-Managing_Providers/topics/Managing_Containers.adoc
@@ -19,7 +19,7 @@ The collected information includes all the data available in other (infrastructu
 
 [NOTE]
 ====
-For Amazon EC2 (AWS) and Google Cloud Engine (GCE) support, OpenShift must be installed using the relevant cloud provider. For more information, see the https://access.redhat.com/documentation/en/openshift-container-platform/[OpenShift Enterprise Installation and Configuration Guide], ensuring to use the desired version of OpenShift.
+For Amazon EC2 (AWS) and Google Cloud Engine (GCE) support, OpenShift must be installed using the relevant cloud provider. For more information, see the https://access.redhat.com/documentation/en/openshift-container-platform/[OpenShift Container Platform Installation and Configuration Guide], ensuring you use the desired version of OpenShift.
 ====
 
 
