--- a/doc-Managing_Providers/topics/Containers_Providers.adoc
+++ b/doc-Managing_Providers/topics/Containers_Providers.adoc
@@ -23,7 +23,7 @@ You can manage policies for containers entities by adding tags. All containers e
 [[Obtaining_OpenShift_Container_Platform_Management_Token]]
 = Obtaining an OpenShift Container Platform Management Token
 
-When deploying OpenShift Enterprise using `openshift-ansible-3.0.20` (or later versions), the OpenShift Container Platform link:https://docs.openshift.com/container-platform/latest/admin_guide/service_accounts.html[service account] and link:https://docs.openshift.com/container-platform/latest/admin_guide/manage_authorization_policy.html[roles] required by {product-title} are installed by default.
+When deploying OpenShift using `openshift-ansible-3.0.20` (or later versions), the OpenShift Container Platform link:https://docs.openshift.com/container-platform/latest/admin_guide/service_accounts.html[service account] and link:https://docs.openshift.com/container-platform/latest/admin_guide/manage_authorization_policy.html[roles] required by {product-title} are installed by default.
 
 [NOTE]
 ====
