updated names from OpenShift Enterprise to OpenShift Container Platform, anywhere that wasn't specifically referring to OSE versions 3.1 and 3.2, in the Integration with OpenShift Guide

--- a/doc-QuickStart_OpenShift_Provider_Guide/miq/index.adoc
+++ b/doc-QuickStart_OpenShift_Provider_Guide/miq/index.adoc
@@ -1,4 +1,4 @@
-= Integration with Red Hat OpenShift Enterprise
+= Integration with Red Hat OpenShift Container Platform
 :vernum: 0
 :doctype: article
 :imagesdir: images
@@ -21,12 +21,12 @@ include::common/attributes/miq.adoc[]
 include::topics/overview.adoc[]
 
 [[ose-metrics]]
-= Configuring OpenShift Enterprise Metrics
+= Configuring OpenShift Container Platform Metrics
 
 include::topics/ose-metrics.adoc[]
 
 [[Obtaining_OpenShift_Enterprise_Management_Token]]
-= Retrieving the OpenShift Enterprise Management Token
+= Retrieving the OpenShift Container Platform Management Token
 
 include::topics/ose-retrieve-tokens.adoc[]
 
