--- a/doc-QuickStart_OpenShift_Provider_Guide/topics/ose-config-cfmiq.adoc
+++ b/doc-QuickStart_OpenShift_Provider_Guide/topics/ose-config-cfmiq.adoc
@@ -3,7 +3,7 @@ Configuring {product-title_short} involves two steps:
 . xref:cf-caputils[], and 
 . xref:cf-smartproxy[]
 
-These steps are required to allow {product-title_short} to collect metrics from OpenShift Enterprise (xref:ose-metrics[]) and use them to perform a SmartState analysis. You can choose different servers to perform either function; the following sections assume that you will.
+These steps are required to allow {product-title_short} to collect metrics from OpenShift Container Platform (xref:ose-metrics[]) and use them to perform a SmartState analysis. You can choose different servers to perform either function; the following sections assume that you will.
 
 
 [[cf-caputils]]
