--- a/doc-QuickStart_OpenShift_Provider_Guide/topics/provider-ose-add-container.adoc
+++ b/doc-QuickStart_OpenShift_Provider_Guide/topics/provider-ose-add-container.adoc
@@ -7,13 +7,13 @@ At this point, you should now be ready to add your OpenShift cluster to {product
 . Navigate to menu:Compute[Containers > Providers].
 . Click  image:1847.png[] (*Configuration*), then click  image:1862.png[] (*Add a New Containers Provider*).
 . Enter a *Name* for the provider.
-. From the *Type* list, select *OpenShift Enterprise*.
+. From the *Type* list, select *OpenShift Container Platform*.
 . Enter the appropriate *Zone* for the provider. By default, the zone is set to `default`.
 // update starts here
 . In the *Default* tab of the *Endpoints* section, enter the fully qualified domain name of the provider in the *Hostname (or IPv4 or IPv6 address)* field. 
 . Enter the *Port* of the provider. The default port is `8443`.
 . In the *Token* and *Confirm Token* fields, enter token obtained earlier in xref:Obtaining_OpenShift_Enterprise_Management_Token[].
-. Click *Validate* to confirm that the {product-title} can connect to the OpenShift Enterprise provider using the provided token.
+. Click *Validate* to confirm that the {product-title} can connect to the OpenShift Container Platform provider using the provided token.
 . Next, click the *Hawkular* tab. From there, enter the _HAWKULARHOST_ (from xref:ose-metrics-deploy[]) in the *Hostname (or IPv4 or IPv6 address)* field.
 . Enter the *Port* of the _HAWKULARHOST_. The default port is `443`.
 . Click *Add*.
