--- a/doc-QuickStart_OpenShift_Provider_Guide/cfme/master.adoc
+++ b/doc-QuickStart_OpenShift_Provider_Guide/cfme/master.adoc
@@ -1,4 +1,4 @@
-= Integration with Red Hat OpenShift Enterprise
+= Integration with Red Hat OpenShift Container Platform
 :vernum: 4.5
 :doctype: article
 :imagesdir: images
@@ -26,12 +26,12 @@ include::topics/overview.adoc[]
 include::topics/prerequisites.adoc[]
 
 [[ose-metrics]]
-= Enabling OpenShift Enterprise Metrics
+= Enabling OpenShift Container Platform Metrics
 
 include::topics/ose-metrics.adoc[]
 
 [[Obtaining_OpenShift_Enterprise_Management_Token]]
-= Retrieving the OpenShift Enterprise Management Token
+= Retrieving the OpenShift Container Platform Management Token
 
 include::topics/ose-retrieve-tokens.adoc[]
 
@@ -47,7 +47,7 @@ include::topics/ose-config-cfmiq.adoc[]
 include::common/smartstate.adoc[]
 
 [[integration]]
-= Adding OpenShift Enterprise as a Container Provider
+= Adding OpenShift Container Platform as a Container Provider
 
 include::topics/provider-ose-add-container.adoc[]
 
