--- a/doc-QuickStart_OpenShift_Provider_Guide/topics/ose-metrics.adoc
+++ b/doc-QuickStart_OpenShift_Provider_Guide/topics/ose-metrics.adoc
@@ -1,6 +1,7 @@
 // https://access.redhat.com/documentation/en/openshift-enterprise/version-3.2/installation-and-configuration/#install-config-cluster-metrics
+// NOTE: This whole section may need updating as OCP 3.3 + are much different: https://access.redhat.com/documentation/en-us/openshift_container_platform/3.3/html-single/installation_and_configuration/#install-config-cluster-metrics
 
-In order for {product-title_short} to collect OpenShift Enterprise node, pod, and container, you must first enable _cluster metrics_ for your OpenShift cluster. This involves running the OpenShift Metrics services inside your cluster. If cluster metrics are already enabled on OpenShift, skip this section and proceed to xref:Obtaining_OpenShift_Enterprise_Management_Token[].
+In order for {product-title_short} to collect OpenShift Container Platform node, pod, and container, you must first enable _cluster metrics_ for your OpenShift cluster. This involves running the OpenShift Metrics services inside your cluster. If cluster metrics are already enabled on OpenShift, skip this section and proceed to xref:Obtaining_OpenShift_Enterprise_Management_Token[].
 
 [NOTE]
 ===================
@@ -22,7 +23,7 @@ If you deployed OpenShift using `openshift-ansible-3.0.20`, then the service acc
 
 To create these accounts:
 
-. Log in as an administrator to any node within the OpenShift Enterprise cluster.
+. Log in as an administrator to any node within the OpenShift Container Platform cluster.
 . Open a terminal.
 . Switch to the *openshift-infra* project:
 +
@@ -61,23 +62,23 @@ $ oadm policy add-cluster-role-to-user \
 [[ose-metrics-storage]]
 == Configuring Metrics Components
 
-The Metrics Deployer installs and configures the components required for OpenShift Enterprise metrics. By default, the Metrics Deployer uses _self-signed certificates_ to secure communication between components. This document assumes that you will use this default. For information on alternative secure communication configurations, see https://access.redhat.com/documentation/en/openshift-enterprise/version-3.2/installation-and-configuration/#metrics-deployer-using-secrets[Using Secrets] in the OpenShift Enterprise _Installation and Configuration_ documentation.
+The Metrics Deployer installs and configures the components required for OpenShift Container Platform metrics. By default, the Metrics Deployer uses _self-signed certificates_ to secure communication between components. This document assumes that you will use this default. For information on alternative secure communication configurations, see https://access.redhat.com/documentation/en/openshift-enterprise/version-3.2/installation-and-configuration/#metrics-deployer-using-secrets[Using Secrets] in the OpenShift Container Platform _Installation and Configuration_ documentation.
 
 [NOTE]
 ===================
-This section is an abridged version of a more detailed chapter, namely https://access.redhat.com/documentation/en/openshift-enterprise/version-3.2/installation-and-configuration/#metrics-data-storage[Metrics Data Storage] in the OpenShift Enterprise _Installation and Configuration_ documentation. Refer to that chapter for more information on how to deploy the metrics plug-in using persistent and non-persistent storage.
+This section is an abridged version of a more detailed chapter, namely https://access.redhat.com/documentation/en/openshift-enterprise/version-3.2/installation-and-configuration/#metrics-data-storage[Metrics Data Storage] in the OpenShift Container Platform _Installation and Configuration_ documentation. Refer to that chapter for more information on how to deploy the metrics plug-in using persistent and non-persistent storage.
 ===================
 
 [[ose-metrics-deploy]]
 === Deploying the Metrics Components
 
-OpenShift Enterprise uses _Hawkular Metrics_ as its metrics engine. The Metrics Deployer will install the Hawkular Metrics service; however, you need to provide the external hostname so that {product-title_short} can reach the Hawkular Metrics service. The base configuration of the Metrics Deployer is defined in the `/usr/share/openshift/examples/infrastructure-templates/enterprise/metrics-deployer.yaml` file.
+OpenShift Container Platform uses _Hawkular Metrics_ as its metrics engine. The Metrics Deployer will install the Hawkular Metrics service; however, you need to provide the external hostname so that {product-title_short} can reach the Hawkular Metrics service. The base configuration of the Metrics Deployer is defined in the `/usr/share/openshift/examples/infrastructure-templates/enterprise/metrics-deployer.yaml` file.
 
-Before deploying OpenShift metrics, choose a storage option, then log in as an administrator to any node within the OpenShift Enterprise cluster. From there, open a terminal and run the corresponding command:
+Before deploying OpenShift metrics, choose a storage option, then log in as an administrator to any node within the OpenShift Container Platform cluster. From there, open a terminal and run the corresponding command:
 
 Deploying with persistent storage::
 
-With _persistent storage_, OpenShift metrics will be stored on a persistent volume. This offers metrics data protection by allowing it to survive a pod recreation or restart. OpenShift metrics requires a specifically configured persistent volume; see https://access.redhat.com/documentation/en/openshift-enterprise/version-3.2/architecture/#architecture-additional-concepts-storage[Persistent Volumes] in the OpenShift Enterprise _Architecture_ documentation. 
+With _persistent storage_, OpenShift metrics will be stored on a persistent volume. This offers metrics data protection by allowing it to survive a pod recreation or restart. OpenShift metrics requires a specifically configured persistent volume; see https://access.redhat.com/documentation/en/openshift-enterprise/version-3.2/architecture/#architecture-additional-concepts-storage[Persistent Volumes] in the OpenShift Container Platform _Architecture_ documentation. 
 +
 //When preparing the persistent volume, note its _size_, as this will be used later in xref:ose-metrics-deploy[].
 +
@@ -124,9 +125,9 @@ For either command, replace _HAWKULARHOST_ with the external hostname that {prod
 Either storage method deploys the required metrics components and creates the necessary service accounts. In particular, the metrics components will be configured to also use the specified _HAWKULARHOST_ as its public endpoint.
 
 [[ose-metrics-finish]]
-=== Applying the Hawkular Metrics Settings to OpenShift Enterprise 
+=== Applying the Hawkular Metrics Settings to OpenShift Container Platform 
 
-After deploying the metrics components, configure OpenShift Enterprise to use them:
+After deploying the metrics components, configure OpenShift Container Platform to use them:
 
 . Open the OpenShift Master Configuration file at `/etc/origin/master/master-config.yaml`. Add the *metricsPublicURL* parameter to the *assetConfig* section, specifying the _HAWKULARHOST_ you specified in xref:ose-metrics-deploy[]:
 +
@@ -136,7 +137,7 @@ assetConfig:
     ...
     metricsPublicURL: "https://_HAWKULARHOST_/hawkular/metrics"
 --------------------------
-. Restart your OpenShift Enterprise master host:
+. Restart your OpenShift Container Platform master host:
 +
 [literal,subs="+quotes"]
 --------------------------
