update VNC section with additional info

--- a/doc-Managing_Infrastructure_and_Inventory/topics/VNC_and_SPICE_consoles.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/VNC_and_SPICE_consoles.adoc
@@ -3,7 +3,7 @@
 
 A console is a graphical window that allows you to view the start up screen, shut down screen, and desktop of a virtual machine, and to interact with that virtual machine in a similar way to a physical machine.
 
-Before opening a console for a virtual machine, you must first configure console access at a network layer, and then configure the browser plug-in and certificate for the virtual machine console.
+Before opening a console for a virtual machine, you must first configure console access at a network layer, and then configure the browser plug-in and certificate for the virtual machine console. Ensure that the Websocket flag is set to *On* for the VM console connection to work properly. For more information, see https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.5/html-single/general_configuration/#server-control-settings[Server Control Settings] in the CloudForms _General Configuration_ guide.
 
 {product-title} offers the following support for HTML5-based VNC and SPICE consoles:
 
@@ -111,7 +111,7 @@ Open a web-based VNC or SPICE console for a virtual machine.
 
 . Navigate to menu:Compute[Infrastructure > Virtual Machines].
 . Click on the virtual machine that you want to access.
-. Click image:6664.png[] (*Open a web-based VNC or SPICE console for this VM*).
+. Click image:screen.png[] (*Access*) and select *VM Console* or *Web Console*.
 
 The virtual machine console opens in a new tab in your browser.
 
