Fixed missing OSE update.

--- a/doc-Managing_Providers/topics/Containers_Providers.adoc
+++ b/doc-Managing_Providers/topics/Containers_Providers.adoc
@@ -58,7 +58,7 @@ Use the OpenShift Cluster Metrics plug-in to collect node, pod, and container me
 
 * Configure {product-title} to allow for all three https://access.redhat.com/documentation/en/red-hat-cloudforms/4.1/deployment-planning-guide/#assigning_the_capacity_and_utilization_server_roles[*Capacity & Utilization* server roles].
 
-* Enable cluster metrics using the https://access.redhat.com/documentation/en-us/openshift_container_platform/3.5/html-single/installation_and_configuration/#install-config-cluster-metrics[OpenShift Enterprise documentation].
+* Enable cluster metrics using the https://access.redhat.com/documentation/en-us/openshift_container_platform/3.5/html-single/installation_and_configuration/#install-config-cluster-metrics[OpenShift Container Platform documentation].
 
 :leveloffset: 2
 include::Adding_an_OpenShift_Provider.adoc[]
