added link to deployment triggers section in OCP dev guide

--- a/doc-Installing_on_OpenShift_Container_Platform/topics/installation.adoc
+++ b/doc-Installing_on_OpenShift_Container_Platform/topics/installation.adoc
@@ -303,10 +303,9 @@ deploymentconfig "postgresql" updated
 +
 [NOTE]
 ====
-The config change trigger is kept enabled; if you desire to have full control of your deployments, you can alternatively turn it off. 
+The configuration change trigger is kept enabled; to have full control of your deployments, you can alternatively turn it off. See the https://access.redhat.com/documentation/en-us/openshift_container_platform/3.5/html-single/developer_guide/#dev-guide-triggering-builds[OpenShift Container Platform Developer Guide] for more information on deployment triggers.
 ====
 
-// (HOW? What does this do and what advantages does turning it off have?)
 
 [[scaling]]
 === Scaling {product-title_short} Appliances
