Resolved merge conflict

--- a/doc-General_Configuration/topics/Configuration.adoc
+++ b/doc-General_Configuration/topics/Configuration.adoc
@@ -2938,6 +2938,12 @@ To restore a database from a backup:
 . Press *Enter* again to manually configure settings.
 . Enter `13` to `Start Server Processes`.
 . Enter `Y` to confirm.
+. If you are restoring a database backup on a high availability environment, start the `regmgrd` service. This is not required in other {product-title_short} configurations.
++
+----
+# systemctl start rh-postgresql95-repmgr
+----
+
 
 [[running-database-garbage-collection]]
 ==== Running Database Garbage Collection
