--- a/doc-Managing_Infrastructure_and_Inventory/topics/VNC_and_SPICE_consoles.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/VNC_and_SPICE_consoles.adoc
@@ -1,10 +1,10 @@
 [[_vnc_and_spice_consoles]]
 = VNC and SPICE Consoles
 
-[NOTE]
-======
-Disable your browser's pop-up blocking feature before opening a console for a virtual machine.
-======
+[IMPORTANT]
+====
+You must disable your browser's pop-up blocking feature for the console to launch.
+====
 
 A console is a graphical window that allows you to view the start up screen, shut down screen, and desktop of a virtual machine, and to interact with that virtual machine in a similar way to a physical machine.
 
