--- a/doc-QuickStart_OpenShift_Provider_Guide/miq/index.adoc
+++ b/doc-QuickStart_OpenShift_Provider_Guide/miq/index.adoc
@@ -1,4 +1,4 @@
-= Integration with Red Hat OpenShift Container Platform
+= Integration with Red Hat OpenShift Enterprise
 :vernum: 0
 :doctype: article
 :imagesdir: images
