Implemented peer review suggestions.

--- a/doc-Deployment_Planning_Guide/topics/planning.adoc
+++ b/doc-Deployment_Planning_Guide/topics/planning.adoc
@@ -65,11 +65,11 @@ The operations initiated from the global region are subject to the role-based ac
 ====
 
 ifdef::cfme[]
-In CloudForms 4.5 and above, configuring database replication automatically enables centralized configuration and no further configuration is needed. See the section on _Configuring Database Replication and Centralized Administration_ in the https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.5/html-single/general_configuration/#configuring_database_replication[General Configuration] guide.
+In CloudForms 4.5 and above, configuring database replication automatically enables centralized administration, eliminating the need for further configuration. See the section on _Configuring Database Replication and Centralized Administration_ in the https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.5/html-single/general_configuration/#configuring_database_replication[General Configuration] guide.
 endif::cfme[]
 
 ifdef::miq[]
-In this version of {product-title_short}, configuring database replication automatically enables centralized configuration and no further configuration is needed.
+In this version of {product-title_short}, configuring database replication automatically enables centralized configuration, eliminating the need for further configuration.
 endif::miq[]
 
 [[tenants]]
