--- a/doc-General_Configuration/topics/Configuration.adoc
+++ b/doc-General_Configuration/topics/Configuration.adoc
@@ -2733,7 +2733,7 @@ To configure database replication, you must configure one {product-title} instan
 
 [NOTE]
 ====
-When you configure database replication in this version of {product-title_short}, centralized administration gets automatically enabled and no further configuration is needed.
+Configuring database replication in this version of {product-title_short} automatically enables centralized administration, eliminating the need for further configuration.
 ====
 
 Centralized administration in {product-title} supports life cycle management operations that can be initiated from the global copy and processed and executed on the remote copy. 
