adding HAProxy content to the guide with expanded context, without diagram for now as it needs edits.

--- a/doc-High_Availability_Guide/miq/index.adoc
+++ b/doc-High_Availability_Guide/miq/index.adoc
@@ -17,3 +17,4 @@ include::common/attributes/miq.adoc[]
 include::topics/Overview.adoc[]
 include::topics/Installation.adoc[]
 include::topics/Database_Failover.adoc[]
+include::topics/HAProxy.adoc[]
