add note and defintion list to backup command

--- a/doc-General_Configuration/topics/Configuration.adoc
+++ b/doc-General_Configuration/topics/Configuration.adoc
@@ -2956,13 +2956,17 @@ The appliance console menu may respond slowly if connections are open and the se
 ==== Performing a Binary Backup and Restoring the Database
 Preserve data at the file system level by performing a binary backup. 
 This includes all databases, users and roles, and other objects. 
-This procedure uses the `pg_basebackup` utility to create a full replacement of the PostgreSQL data directory, capturing the exact state of the database when the backup finishes.
+
+[NOTE]
+====
+This procedure uses the `pg_basebackup` utility to perform a remote database backup and create a full replacement of the PostgreSQL data directory, capturing the exact state of the database when the backup finishes. For more information on the `pg_basebackup` utility, see the PostgreSQL documentation.
+====
 
 ===== Performing a Binary Backup
 
 Create a binary backup and store it as a tar file inside the {product-title_short} backup directory. 
 
-[NOTE]
+[IMPORTANT]
 ======
 PostgreSQL superuser or user with _Replication_ permissions are required to perform this procedure. 
 ======
@@ -2970,23 +2974,36 @@ PostgreSQL superuser or user with _Replication_ permissions are required to perf
 . SSH into the database server as the *root* user or provide PostgreSQL superuser credentials.
 +
 . Run the `pg_basebackup` command to create the backup.
++
 -----
-# pg_basebackup -x -h <DB_SERVER_IP> -U root -Ft -z -D cfme-backup
+# pg_basebackup -x -h hostname -U root -Ft -z -D filename
 -----
++
+> where:
+>
+> *-h* _hostname_ 
+>     
+>     Specifies the IP address of the database server.
+>
+> *-D* _filename_
+>
+>    Specifies the name of the directory created to contain the backup.
 
+ 
 ===== Restoring a Database from the Backup
 Restore your PostgreSQL binary backup using the following steps. This process will require stopping both EVM and PostgreSQL services before restoring data.  
 
 . Copy the existing backup to the target VM
 +
 -----
-# scp cfme-backup/base.tar.gz root@<DB_SERVER_IP>:/var/www/cfme
+# scp filename/base.tar.gz root@hostname:/var/www/miq
 -----
 +
-. SSH to the target VM
+. SSH to the target VM.no
+
 +
 -----
-# ssh root@<DB_SERVER_IP>
+# ssh root@hostname
 -----
 +
 . Stop both the EVM and PostgreSQL servers.
@@ -3011,7 +3028,7 @@ Restore your PostgreSQL binary backup using the following steps. This process wi
 . Unzip the tar file to the new directory.
 +
 -----
-# tar -xzf /var/www/miq/base.tar.gz -C /var/opt/rh/rh-postgresql95/lib/pgsql/data 
+# tar -xzf /var/www/miq/base.tar.gz -C /var/opt/rh/rh-postgresql95/lib/pgsql/data
 -----
 +
 . Correct permissions.
@@ -3021,7 +3038,7 @@ Restore your PostgreSQL binary backup using the following steps. This process wi
 # chmod 700 /var/opt/rh/rh-postgresql95/lib/pgsql/data
 -----
 +
-. Restart the PostgreSQL and EVM servers
+. Restart the PostgreSQL and EVM servers.
 +
 -----
 # systemctl start $APPLIANCE_PG_SERVICE
