update with dev comments

--- a/doc-General_Configuration/topics/Configuration.adoc
+++ b/doc-General_Configuration/topics/Configuration.adoc
@@ -2956,7 +2956,7 @@ This procedure uses the `pg_basebackup` utility to perform a remote database bac
 
 ===== Performing a Binary Backup
 
-Create a binary backup and store it as a tar file inside the {product-title_short} backup directory. 
+Create a binary backup and store it as a `gzip`tar file inside the {product-title_short} backup directory. 
 
 [IMPORTANT]
 ======
